src/objects/SDC__Scenario_Stratus__c.object
<CustomObject>
    <fields>
        <fullName>SDC__ObjectType__c</fullName>
        <label>ObjectType</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDC__Scenario_Data__c</fullName>
        <label>Scenario_Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDC__Scenario_Name__c</fullName>
        <label>Scenario_Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Scenario_Stratus</label>
    <nameField>
        <label>Stratus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stratus&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>